--- a/Football-House/news.html
+++ b/Football-House/news.html
@@ -13,9 +13,9 @@
   <body>
     <nav>
       <div id="humberger">
-        <i class="fa fa-bars" aria-hidden="true"></i>
+        <i class="fa fa-bars"></i>
       </div>
-      <div class="cancel"><i class="fa fa-times" aria-hidden="true"></i></div>
+      <div class="cancel"><span class="fa fa-times"></span></div>
       <div id="logo">
         <img src="./images/ball.png" alt="" />
         <a href="#" class="logo listItem">Football-House</a>
@@ -48,7 +48,7 @@
     <section id="news">
       <div class="main-news">
         <div class="article">
-          <div class="thumbnail psg">
+          <div class="thumbnail">
             <img src="./images/psg.jpeg" alt="" srcset="" />
           </div>
           <div class="des">
@@ -60,19 +60,19 @@
             </p>
           </div>
           <div class="social">
-            <div class="like">
+            <div class="like" id="aaa">
               <i class="fa fa-thumbs-up" aria-hidden="true"></i>
             </div>
-            <div class="dislike">
+            <div class="dislike" id="bbb">
               <i class="fa fa-thumbs-down" aria-hidden="true"></i>
             </div>
-            <div class="comment">
+            <div class="comment" id="ccc">
               <i class="fa fa-commenting" aria-hidden="true"></i>
             </div>
           </div>
         </div>
         <div class="article">
-          <div class="thumbnail mahrez">
+          <div class="thumbnail">
             <img src="./images/mahrez.jpeg" alt="" srcset="" />
           </div>
           <div class="des">
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="article">
-          <div class="thumbnail africa">
+          <div class="thumbnail">
             <img src="./images/africa.jpeg" alt="" srcset="" />
           </div>
           <div class="des">
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="article">
-          <div class="thumbnail argentina">
+          <div class="thumbnail">
             <img src="./images/argentina.jpeg" alt="" srcset="" />
           </div>
           <div class="des">
@@ -132,13 +132,13 @@
             </p>
           </div>
           <div class="social">
-            <div class="like">
+            <div id="cc1" class="like">
               <i class="fa fa-thumbs-up" aria-hidden="true"></i>
             </div>
-            <div class="dislike">
+            <div id="cc2" class="dislike">
               <i class="fa fa-thumbs-down" aria-hidden="true"></i>
             </div>
-            <div class="comment">
+            <div id="cc3" class="comment">
               <i class="fa fa-commenting" aria-hidden="true"></i>
             </div>
           </div>
