adding sign-in and sign-up pages

--- a/Football-House/vote.html
+++ b/Football-House/vote.html
@@ -16,7 +16,7 @@
       <div id="humberger">
         <i class="fa fa-bars"></i>
       </div>
-      <div class="cancel"><span class="fa fa-times"></span></div>
+      <div id="cancel"><span class="fa fa-times"></span></div>
       <div id="logo">
         <img src="./images/ball.png" alt="" />
         <a href="#" class="logo listItem">Football-House</a>
@@ -32,8 +32,8 @@
           <li><a href="#" class="listItem">Vote</a></li>
         </ul>
         <div class="buttons2">
-          <button class="Lsign-in">Sign-in</button>
-          <button class="Lsign-up">Sign-up</button>
+          <a href="signin.html" class="Lsign-in">Sign-in</a>
+          <a href="signup.html" class="Lsign-up">Sign-up</a>
         </div>
       </div>
       <div class="last-items">
@@ -41,8 +41,8 @@
           <input type="search" placeholder="Search" id="ser" required />
           <button type="submit" class="fa fa-search"></button>
         </form>
-        <button class="sign-in">Sign-in</button>
-        <button class="sign-up">Sign-up</button>
+        <a href="signin.html" class="sign-in">Sign-in</a>
+        <a href="signup.html" class="sign-up">Sign-up</a>
       </div>
     </nav>
 
